@@ -344,14 +344,13 @@ WMRunModalFilePanelForDirectory(WMFilePanel *panel, WMWindow *owner,
         break;
     }
 
+    WMSetWindowUPosition(panel->win, 
+		 (scr->rootView->size.width - WMWidgetWidth(panel->win))/2,
+		 (scr->rootView->size.height - WMWidgetHeight(panel->win))/2);
     WMSetLabelText(panel->titleLabel, name);
 
     scr->modalView = W_VIEW(panel->win);
     WMMapWidget(panel->win);
-
-    WMMoveWidget(panel->win, 
-		 (scr->rootView->size.width - WMWidgetWidth(panel->win))/2,
-		 (scr->rootView->size.height - WMWidgetHeight(panel->win))/2);
 
     scr->modal = 1;
     while (!panel->flags.done) {	
